--- a/GHKTaunggyi.html
+++ b/GHKTaunggyi.html
@@ -1,14 +1,6 @@
-@font-face {
-  font-family: 'GHK Taunggyi';
-  src: url('https://saosump.github.io/font/GHKTaungGyi.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'GHK TaungGyi';
-  src: url('https://saosump.github.io/font/GHKTaungGyi.ttf') format('truetype'),
-       url('https://saosump.github.io/font/GHKTaungGyi.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
+      @font-face {
+        font-family: &#39;GreatHorKham Taunggyi&#39;;
+        src: url(&quot;https://saosump.github.io/font/GHKTaungGyi.woff&quot;) format(&quot;woff&quot;),
+          url(&quot;https://saosump.github.io/font/GHKTaungGyi.woff2&quot;) format(&quot;woff2&quot;),
+          url(&quot;https://saosump.github.io/font/GHKTaungGyi.ttf&quot;) format(&quot;ttf&quot;);
+      }
