--- a/index.html
+++ b/index.html
@@ -1,2 +1,81 @@
 <h1>Sao Su Mp</h1>
 <p>တႃႇၽင်ၾွၼ်ႉတႆး <a helf="https://saosu.blogspot.com/">www.saosu.blogspot.com</a></p>
+**********************
+<div style="font-family: NamKhoneUnicode;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NamKhoneUnicode]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: NK SSmart2;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NK SSmart2]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: NK SSmart3;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NK SSmart3]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: NK SSmart4;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NK SSmart4]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: GHK Muse;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GHK Muse]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: GHK Tachileik;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GHK Tachileik]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: GreatHorKham Yangon;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GreatHorKham Yangon]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: GHK TaungGyi;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GHK TaungGyi]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: GHK KengTung;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GHK KengTung]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+<br />
+<div style="font-family: GHK TaungGyi;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GHK TaungGyi]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+<br />
+<div style="font-family: LuenTai1;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [LuenTai1]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: LuenTai2;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [LuenTai2]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: NamTeng Web Pro;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NamTeng Web Pro]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: NamKhone Web Pro;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NanKhone Web Pro]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
+<br />
+<div style="font-family: Myanmar Sans Pro;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [Myanmar Sans Pro]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<div style="font-family: Pyidaungsu;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [Pyidaungsu]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<div style="font-family: PangLong;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [PangLong]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<div style="font-family: Ours-Unicode;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [Ours-Unicode]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
+
