--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <h1>Sao Su Mp</h1>
 <p>တႃႇၽင်ၾွၼ်ႉတႆး <a helf="https://saosu.blogspot.com/">www.saosu.blogspot.com</a></p>
 **********************
+<head><link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/></head>
 <div style="font-family: NamKhoneUnicode;">
 <span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NamKhoneUnicode]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
 <span style="font-size: large;"><br /></span>
