--- a/tai.html
+++ b/tai.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -31,10 +32,10 @@
     margin-bottom: 30px;
   }  
   .jumbotron {
-    background-color: #f4511e;
+    background: linear-gradient(to bottom, #330033 0%, #660033 100%);
     color: #fff;
     padding: 100px 25px;
-    font-family: Montserrat, sans-serif;
+    font-family: GHK TaungGyi, sans-serif;
   }
   .container-fluid {
     padding: 60px 50px;
@@ -200,41 +201,41 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="/"><img src="https://1.bp.blogspot.com/-IunnIT0lnT8/XXuypXl-g5I/AAAAAAAAAIg/lZO2TQUB1vIn8AwoPq0-J4beyQfaEGj9ACK4BGAYYCw/s1600/LogoMM.png" style="width:100px;height:30px;"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#services">SERVICES</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#pricing">PRICING</a></li>
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#about">လွင်ႈႁဝ်း</a></li>
+        <li><a href="#services">ၼႃႈၵၢၼ်</a></li>
+        <li><a href="#portfolio">ၶူင်သၢင်ႈ</a></li>
+        <li><a href="#pricing">ၵၢၼ်ႁဵၼ်း</a></li>
+        <li><a href="#contact">ၵပ်းသိုပ်ႇ</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
 <div class="jumbotron text-center">
-  <h1 style="font-family:GHK KengTung">ၸဝ်ႈသုထမ်ႇမ(မိူင်းပၼ်ႇ)</h1> 
-  <p>We specialize in blablabla</p> 
-  <form>
+  <h1 style="font-family:GHK KengTung">ၸဝ်ႈသုထမ်ႇမ</h1> 
+  <p style="font-family:GHK Muse">ၵေႃႇတင်ႈ ၽိုၵ်းသၢင်ႈ ႁၢင်ႈၶိူင်ႈ ဝႅပ်ႉသၢႆႉ</p> 
+  <center><form style="max-width: 50rem;">
     <div class="input-group">
-      <input type="email" class="form-control" size="50" placeholder="Email Address" required>
+      <input type="email" style="font-family:GHK TaungGyi" class="form-control" size="50" placeholder="သႂ်ႇမၢႆဢီးမႄး(လ်)..." required>
       <div class="input-group-btn">
-        <button type="button" class="btn btn-danger">Subscribe</button>
+        <button type="button" class="btn btn-danger" style="font-family:GHK TaungGyi">တဵၵ်းယိုၼ်</button>
       </div>
     </div>
-  </form>
+  </form></center>
 </div>
 
 <!-- Container (About Section) -->
 <div id="about" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
-      <h2>About Company Page</h2><br>
-      <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <br><button class="btn btn-default btn-lg">Get in Touch</button>
+      <h2>လွင်ႈႁဝ်း</h2>
+      <h4 style="font-family:GreathorKham Yangon">ၼႃႈဝႅပ်ႉဢၼ်ၼႆႉပဵၼ်ဝႅပ်ႉသုၼ်ႇတူဝ် ၸဝ်ႈသုထမ်ႇမ(မိူင်းပၼ်ႇ) ၵေႃႇသၢင်ႈ ၶပ်ႉႁၢင်ႈၸၢမ်းတူၺ်းပိူင်လိူင်းမၼ်း ၸွမ်းၼင်ႇပိူင် w3schools.com တမ်းဝၢင်းဝႆႉပၼ်ၼၼ်ႉသေ ၶိုၼ်းမႄးတတ်း ၶပ်ႉႁၢင်ႈမၼ်းဝႆႉယူႇယဝ်ႉ။ </h4><br>
+      <p style="font-family:GreathorKham Yangon">ယိူင်းဢၢၼ်းၼႃႈဝႅပ်ႉဢၼ်ၼႆႉ တႃႇပဵၼ်ၽၢင်ႁၢင်ႈတူဝ်ယၢင်ႇလႄႈ တႃႇႁႂ်ႈပဵၼ်ယူင်ႇသၢင်ႈ ၶပ်ႉႁၢင်ႈ လွင်ႈႁၢင်ႈလီၼႃႈဝႅပ်ႉၼၼ်ႉသေ ႁႂ်ႈပဵၼ် ပိူင်တႅၵ်ႈမၼ်းဝႆႉ ဢၼ်ၼိုင်ႈ။</p>
+      <br><button style="font-family:GreathorKham Yangon" class="btn btn-default btn-lg">တူၺ်းထႅင်ႈ</button>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-signal logo"></span>
@@ -429,27 +430,27 @@
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
-  <h2 class="text-center">CONTACT</h2>
+  <h2 style="font-family:GHK Muse" class="text-center">ႁဵင်းလိၵ်ႈတီႈၵပ်းသိုပ်ႇ</h2>
   <div class="row">
     <div class="col-sm-5">
-      <p>Contact us and we'll get back to you within 24 hours.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+      <p>ၵပ်းသိုပ်ႇမႃးလႆႈ 24 ၸူဝ်ႈမွင်း ၼင်ႇမီးယၢမ်းတၼ်းဝႆးၼင်ႇၵႃႈဝႆးလႆႈ တေၶိုၼ်းတွပ်ႇပၼ်ယူႇၶႃႈ။</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> မိူင်းပၼ်ႇ၊ မိူင်းတႆးပွတ်းၸၢၼ်း။</p>
+      <p><span class="glyphicon glyphicon-phone"></span> +(95) 097 771 11140</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> saosu.mp@gmail.com</p>
     </div>
     <div class="col-sm-7 slideanim">
       <div class="row">
         <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+          <input class="form-control" id="name" name="name" placeholder="ၸိုဝ်ႈ" type="text" required>
         </div>
         <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+          <input style="font-family:GHK TaungGyi" class="form-control" id="email" name="email" placeholder="မၢႆဢီးမႄး(လ်) *" type="email" required>
         </div>
       </div>
-      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+      <textarea style="font-family:GHK TaungGyi" class="form-control" id="comments" name="comments" placeholder="ၶေႃႈၵႂၢမ်း *" rows="5"></textarea><br>
       <div class="row">
         <div class="col-sm-12 form-group">
-          <button class="btn btn-default pull-right" type="submit">Send</button>
+          <button style="font-family:GHK TaungGyi" class="btn btn-default pull-right" type="submit">တဵၵ်းသူင်ႇ</button>
         </div>
       </div>
     </div>
@@ -457,13 +458,13 @@
 </div>
 
 <!-- Image of location/map -->
-<img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d904.0525116488635!2d98.35654737423505!3d20.31897463315013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30d1af7e5eb05145%3A0x9e0122db0428313e!2zMjDCsDE5JzA4LjEiTiA5OMKwMjEnMjMuMiJF!5e1!3m2!1sen!2slk!4v1568634710298!5m2!1sen!2slk" width="100%" height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
 <footer class="container-fluid text-center">
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
+  <p>တႅမ်ႈၸွမ်းလူၺ်ႈ [<a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a>]</p>
 </footer>
 
 <script>
