--- a/tai.html
+++ b/tai.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com -->
-  <title>Bootstrap Theme Company Page</title>
+  <title>SaoSu</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -201,7 +201,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="/"><img src="https://1.bp.blogspot.com/-IunnIT0lnT8/XXuypXl-g5I/AAAAAAAAAIg/lZO2TQUB1vIn8AwoPq0-J4beyQfaEGj9ACK4BGAYYCw/s1600/LogoMM.png" style="width:100px;height:30px;"></a>
+      <a class="navbar-brand" href="/tai"><img src="https://1.bp.blogspot.com/-IunnIT0lnT8/XXuypXl-g5I/AAAAAAAAAIg/lZO2TQUB1vIn8AwoPq0-J4beyQfaEGj9ACK4BGAYYCw/s1600/LogoMM.png" style="width:100px;height:30px;"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
