--- a/tai.html
+++ b/tai.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com -->
+  <!-- Theme Made By www.saosu.blogspot.com -->
   <title>SaoSu</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <style>
   body {
-    font: 400 15px Lato, sans-serif;
+    font: 400 15px GreatHorKham Yangon, Lato, sans-serif;
     line-height: 1.8;
     color: #818181;
   }
@@ -35,7 +35,7 @@
     background: linear-gradient(to bottom, #330033 0%, #660033 100%);
     color: #fff;
     padding: 100px 25px;
-    font-family: GHK TaungGyi, sans-serif;
+    font-family: GreatHorKham Yangon, sans-serif;
   }
   .container-fluid {
     padding: 60px 50px;
@@ -124,11 +124,11 @@
     background-color: #f4511e;
     z-index: 9999;
     border: 0;
-    font-size: 12px !important;
+    font-size: 16px !important;
     line-height: 1.42857143 !important;
     letter-spacing: 4px;
     border-radius: 0;
-    font-family: Montserrat, sans-serif;
+    font-family: GreatHorKham Yangon, sans-serif;
   }
   .navbar li a, .navbar .navbar-brand {
     color: #fff !important;
@@ -196,20 +196,20 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+      <button type="button" style="background-color:#bbb" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span style="background-color:#fff" class="icon-bar"></span>
+        <span style="background-color:#fff" class="icon-bar"></span>
+        <span style="background-color:#fff" class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="/font/tai"><img src="https://1.bp.blogspot.com/-IunnIT0lnT8/XXuypXl-g5I/AAAAAAAAAIg/lZO2TQUB1vIn8AwoPq0-J4beyQfaEGj9ACK4BGAYYCw/s1600/LogoMM.png" style="width:100px;height:30px;"></a>
+       <a style="margin-top:-10px" class="navbar-brand" href="/"><img src="https://1.bp.blogspot.com/-IunnIT0lnT8/XXuypXl-g5I/AAAAAAAAAIg/lZO2TQUB1vIn8AwoPq0-J4beyQfaEGj9ACK4BGAYYCw/s1600/LogoMM.png" style="width:auto;height:40px;"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">လွင်ႈႁဝ်း</a></li>
-        <li><a href="#services">ၼႃႈၵၢၼ်</a></li>
-        <li><a href="#portfolio">ၶူင်သၢင်ႈ</a></li>
-        <li><a href="#pricing">ၵၢၼ်ႁဵၼ်း</a></li>
-        <li><a href="#contact">ၵပ်းသိုပ်ႇ</a></li>
+        <li><a href="#about"><span class="glyphicon glyphicon-user"></span> လွင်ႈႁဝ်း</a></li>
+        <li><a href="#services"><span class="glyphicon glyphicon-stats"></span> ၼႃႈၵၢၼ်</a></li>
+        <li><a href="#portfolio"><span class="glyphicon glyphicon-cog"></span> ၶူင်သၢင်ႈ</a></li>
+        <li><a href="#pricing"><span class="glyphicon glyphicon-info-sign"></span> ၵၢၼ်ႁဵၼ်း</a></li>
+        <li><a href="#contact"><span class="glyphicon glyphicon-envelope"></span> ၵပ်းသိုပ်ႇ</a></li>
       </ul>
     </div>
   </div>
@@ -232,8 +232,8 @@
 <div id="about" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
-      <h2>လွင်ႈႁဝ်း</h2>
-      <h4 style="font-family:GreathorKham Yangon">ၼႃႈဝႅပ်ႉဢၼ်ၼႆႉပဵၼ်ဝႅပ်ႉသုၼ်ႇတူဝ် ၸဝ်ႈသုထမ်ႇမ(မိူင်းပၼ်ႇ) ၵေႃႇသၢင်ႈ ၶပ်ႉႁၢင်ႈၸၢမ်းတူၺ်းပိူင်လိူင်းမၼ်း ၸွမ်းၼင်ႇပိူင် w3schools.com တမ်းဝၢင်းဝႆႉပၼ်ၼၼ်ႉသေ ၶိုၼ်းမႄးတတ်း ၶပ်ႉႁၢင်ႈမၼ်းဝႆႉယူႇယဝ်ႉ။ </h4><br>
+      <h2 style="font-family:GHK Muse">လွင်ႈႁဝ်း</h2>
+      <h4 style="font-family:GreathorKham Yangon">ၼႃႈဝႅပ်ႉဢၼ်ၼႆႉပဵၼ်ဝႅပ်ႉသုၼ်ႇတူဝ် ၸဝ်ႈသုထမ်ႇမ(မိူင်းပၼ်ႇ) ၵေႃႇသၢင်ႈ ၶပ်ႉႁၢင်ႈၸၢမ်းတူၺ်းပိူင်လိူင်းမၼ်း ၸွမ်းၼင်ႇပိူင် w3schools.com တမ်းဝၢင်းဝႆႉပၼ်ၼၼ်ႉသေ ၶိုၼ်းမႄးတတ်း ၶပ်ႉႁၢင်ႈမၼ်းဝႆႉယူႇယဝ်ႉ။ </h4>
       <p style="font-family:GreathorKham Yangon">ယိူင်းဢၢၼ်းၼႃႈဝႅပ်ႉဢၼ်ၼႆႉ တႃႇပဵၼ်ၽၢင်ႁၢင်ႈတူဝ်ယၢင်ႇလႄႈ တႃႇႁႂ်ႈပဵၼ်ယူင်ႇသၢင်ႈ ၶပ်ႉႁၢင်ႈ လွင်ႈႁၢင်ႈလီၼႃႈဝႅပ်ႉၼၼ်ႉသေ ႁႂ်ႈပဵၼ် ပိူင်တႅၵ်ႈမၼ်းဝႆႉ ဢၼ်ၼိုင်ႈ။</p>
       <br><button style="font-family:GreathorKham Yangon" class="btn btn-default btn-lg">တူၺ်းထႅင်ႈ</button>
     </div>
@@ -306,21 +306,21 @@
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="paris.jpg" alt="Paris" width="400" height="300">
+        <img src="https://www.w3schools.com/bootstrap/paris.jpg" alt="Paris" width="400" height="300">
         <p><strong>Paris</strong></p>
         <p>Yes, we built Paris</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="newyork.jpg" alt="New York" width="400" height="300">
+        <img src="https://www.w3schools.com/bootstrap/newyork.jpg" alt="New York" width="400" height="300">
         <p><strong>New York</strong></p>
         <p>We built New York</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
+        <img src="https://www.w3schools.com/bootstrap/sanfran.jpg" alt="San Francisco" width="400" height="300">
         <p><strong>San Francisco</strong></p>
         <p>Yes, San Fran is ours</p>
       </div>
@@ -430,7 +430,7 @@
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
-  <h2 style="font-family:GHK Muse" class="text-center">ႁဵင်းလိၵ်ႈတီႈၵပ်းသိုပ်ႇ</h2>
+  <h2 style="font-family:GHK Muse" class="text-center">တီႈၵပ်းသိုပ်ႇ</h2>
   <div class="row">
     <div class="col-sm-5">
       <p>ၵပ်းသိုပ်ႇမႃးလႆႈ 24 ၸူဝ်ႈမွင်း ၼင်ႇမီးယၢမ်းတၼ်းဝႆးၼင်ႇၵႃႈဝႆးလႆႈ တေၶိုၼ်းတွပ်ႇပၼ်ယူႇၶႃႈ။</p>
@@ -439,20 +439,8 @@
       <p><span class="glyphicon glyphicon-envelope"></span> saosu.mp@gmail.com</p>
     </div>
     <div class="col-sm-7 slideanim">
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="ၸိုဝ်ႈ" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input style="font-family:GHK TaungGyi" class="form-control" id="email" name="email" placeholder="မၢႆဢီးမႄး(လ်) *" type="email" required>
-        </div>
-      </div>
-      <textarea style="font-family:GHK TaungGyi" class="form-control" id="comments" name="comments" placeholder="ၶေႃႈၵႂၢမ်း *" rows="5"></textarea><br>
-      <div class="row">
-        <div class="col-sm-12 form-group">
-          <button style="font-family:GHK TaungGyi" class="btn btn-default pull-right" type="submit">တဵၵ်းသူင်ႇ</button>
-        </div>
-      </div>
+      <div style="position:relative;height:0;padding-bottom:56.25%">    
+<iframe src="https://www.youtube.com/embed/gfYhLb3TDqY?autoplay=1" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen="" width="640" height="360" frameborder="0" __idm_frm__="5032"></iframe></div>
     </div>
   </div>
 </div>
@@ -461,7 +449,7 @@
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d904.0525116488635!2d98.35654737423505!3d20.31897463315013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30d1af7e5eb05145%3A0x9e0122db0428313e!2zMjDCsDE5JzA4LjEiTiA5OMKwMjEnMjMuMiJF!5e1!3m2!1sen!2slk!4v1568634710298!5m2!1sen!2slk" width="100%" height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
 <footer class="container-fluid text-center">
-  <a href="#myPage" title="To Top">
+  <a href="#" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
   <p>တႅမ်ႈၸွမ်းလူၺ်ႈ [<a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a>]</p>
