--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Sao Su Mp</h1>
+<h1>ၾွၼ်ႉယူႇၼီႇၶူတ်ႉတႆး တႃႇၸႂ်ႉၼႂ်း ဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</h1>
 <p>တႃႇၽင်ၾွၼ်ႉတႆး <a helf="https://saosu.blogspot.com/">www.saosu.blogspot.com</a></p>
 **********************
 <head><link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/></head>
@@ -68,7 +68,9 @@
 <div style="font-family: NamKhone Web Pro;">
 <span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NanKhone Web Pro]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
 <span style="font-size: large;"><br /></span>
-
+<div style="font-family: TharLon;">
+<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [TharLon]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
+<span style="font-size: large;"><br /></span>
 <br />
 <div style="font-family: Myanmar Sans Pro;">
 <span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [Myanmar Sans Pro]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
