--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
+<head><link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/></head>
 <h1>ၾွၼ်ႉယူႇၼီႇၶူတ်ႉတႆး တႃႇၸႂ်ႉၼႂ်း ဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</h1>
 <p>တႃႇၽင်ၾွၼ်ႉတႆး <a helf="https://saosu.blogspot.com/">www.saosu.blogspot.com</a></p>
 **********************
-<head><link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/></head>
 <div style="font-family: NamKhoneUnicode;">
 <span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NamKhoneUnicode]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-
+<span style="font-size: large;"></span>
+********
 <br />
 <div style="font-family: NK SSmart2;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NK SSmart2]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
+<p>ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NK SSmart2]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</p>
+
 
 <br />
 <div style="font-family: NK SSmart3;">
