--- a/index.html
+++ b/index.html
@@ -1,84 +1,68 @@
 <head><link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/></head>
-<h1>ၾွၼ်ႉယူႇၼီႇၶူတ်ႉတႆး တႃႇၸႂ်ႉၼႂ်း ဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</h1>
-<p>တႃႇၽင်ၾွၼ်ႉတႆး <a helf="https://saosu.blogspot.com/">www.saosu.blogspot.com</a></p>
-**********************
-<div style="font-family: NamKhoneUnicode;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NamKhoneUnicode]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"></span>
-********
-<br />
-<div style="font-family: NK SSmart2;">
-<p>ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NK SSmart2]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</p>
-
-
-<br />
-<div style="font-family: NK SSmart3;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NK SSmart3]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-
-<br />
-<div style="font-family: NK SSmart4;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NK SSmart4]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-
-<br />
-<div style="font-family: GHK Muse;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GHK Muse]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-
-<br />
-<div style="font-family: GHK Tachileik;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GHK Tachileik]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-
-<br />
-<div style="font-family: GreatHorKham Yangon;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GreatHorKham Yangon]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-
-<br />
-<div style="font-family: GHK TaungGyi;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GHK TaungGyi]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-
-<br />
-<div style="font-family: GHK KengTung;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GHK KengTung]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-<br />
-<div style="font-family: GHK TaungGyi;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [GHK TaungGyi]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-<br />
-<div style="font-family: LuenTai1;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [LuenTai1]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-
-<br />
-<div style="font-family: LuenTai2;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [LuenTai2]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-
-<br />
-<div style="font-family: NamTeng Web Pro;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NamTeng Web Pro]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-
-<br />
-<div style="font-family: NamKhone Web Pro;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [NanKhone Web Pro]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-<div style="font-family: TharLon;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [TharLon]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-<br />
-<div style="font-family: Myanmar Sans Pro;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [Myanmar Sans Pro]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<div style="font-family: Pyidaungsu;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [Pyidaungsu]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<div style="font-family: PangLong;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [PangLong]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<div style="font-family: Ours-Unicode;">
-<span style="font-size: large;">ၸၢမ်းတႅမ်ႈတူၺ်း ၾွၼ်ႉ  [Ours-Unicode]  ၸဝ်ႈသြႃႇလူင် ပိဏ္ဍောလ -- ပီ ႒႐႑႙ တႅမ်ႈတူဝ်ၼပ်ႉ ႑႒႓႔႕႖႗႘႙႐  Palī Sāsanā</span></div>
-<span style="font-size: large;"><br /></span>
-
+<h1>ၾွၼ်ႉယူႇၼီႇၶူတ်ႉတႆး တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</h1>
+<h2>ၵဵပ်းတၢင်ႇၼႄ <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
+www.saosu.blogspot.com</font></a></h2>
+<ol>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NK SSmart2; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NK SSmart2] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NK SSmart3; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NK SSmart3] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NK SSmart4; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NK SSmart4] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: GHK Muse; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [GHK Muse] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: GHK Tachileik; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [GHK Tachileik] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhoneUnicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+</ol>
+<p><i><strong>မၢႆတွင်း ... </strong></i>ၾွၼ်ႉဢၼ်လႂ်ပႆႇမီးလႄႈ သင်ဝႃႈၶႂ်ႈသႂ်ႇထႅင်ႈၼႆ သူင်ႇမႃးပၼ်လႆႈယူႇ တေဢဝ်သႂ်ႇပၼ်ၼႂ်းသဵၼ်ႈမၢႆၼႆႉ။</p>
+<p><i><strong>ၶေႃႈယွမ်းၼွမ်း ... </strong></i>ယွမ်းၼွမ်းလႄႈ ယွၼ်းတၢင်းၶႂၢင်ႉထိုင် ၸိူဝ်းၽူႈၶူင်ၾွၼ်ႉယူႇၼီႇၶူတ်ႉႁဝ်းၶဝ်တင်းသဵင်ႈယူႇဢေႃႈ ယွၼ်ႉဝႃႈ ၾွၼ်ႉယူႇၼီႇၶူတ်ႉမၢင်ဢၼ် ဢမ်ႇႁူႉၸိုဝ်ႈၽူႈၶူင်သၢင်ႈမၼ်းလႄႈ ၸင်ႇဝႃႈ ဢမ်ႇလႆႈသႂ်ႇပႃးၽူႈၶူင်သၢင်ႈမၼ်းၶႃႈ။</p>
