--- a/index.html
+++ b/index.html
@@ -1,68 +1,92 @@
 <head><link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/></head>
-<h1>ၾွၼ်ႉယူႇၼီႇၶူတ်ႉတႆး တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</h1>
+<h1>ၾွၼ်ႉယူႇၼီႇၶူတ်ႉ တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</h1>
 <h2>ၵဵပ်းတၢင်ႇၼႄ <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
 www.saosu.blogspot.com</font></a></h2>
 <ol>
 <li><p style="font-family: NamKhoneUnicode; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/NamKhoneUnicode/NamKhoneUnicode.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: GHK TaungGyi; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [GHK TaungGyi] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/GHKTaungGyi/GHKTaungGyi.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: GreatHorKham Yangon; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [GreatHorKham Yangon] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://ar-themes.github.io/fonts/GHK/GreatHorKham Yangon.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: PangLong; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [PangLong] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/PangLong/PangLong.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Ours-Unicode; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Ours-Unicode] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://mmwebfonts.comquas.com/fonts/oursunicode.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Tharlon; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Tharlon] 
+ၸၼ်လူတ်ႇလူင်း [<a href="//fonts.gstatic.com/ea/tharlon/v3/Tharlon-Regular.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamKhone Web Pro; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhone Web Pro] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/NamKhoneWebPro/NamKhoneWebPro.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: NamTeng Web Pro; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamTeng Web Pro] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/NamTengWebPro/NamTengWebPro.ttf" target="_blank">Download Font</a>]</p></li>
 <li><p style="font-family: NK SSmart2; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NK SSmart2] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/NKSSmart2/NKSSmart2.ttf" target="_blank">Download Font</a>]</p></li>
 <li><p style="font-family: NK SSmart3; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NK SSmart3] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/NKSSmart3/NKSSmart3.ttf" target="_blank">Download Font</a>]</p></li>
 <li><p style="font-family: NK SSmart4; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NK SSmart4] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/NKSSmart4/NKSSmart4.ttf" target="_blank">Download Font</a>]</p></li>
 <li><p style="font-family: GHK Muse; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [GHK Muse] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/GHKMuSe/GHKMuse.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: GHK KengTung; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [GHK KengTung] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://mmwebfonts.comquas.com/fonts/GHKKengtung.ttf" target="_blank">Download Font</a>]</p></li>
 <li><p style="font-family: GHK Tachileik; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [GHK Tachileik] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
-<li><p style="font-family: NamKhoneUnicode; font-size: large;">
-ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
-ၸၼ်လူတ်ႇလူင်း [<a href="#" target="_blank">Download Font</a>]</p></li>
+ၸၼ်လူတ်ႇလူင်း [<a href="https://ar-themes.github.io/fonts/GHK/GHKTachileik.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: LuenTai1; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [LuenTai1] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/LuenTai1/LuenTai1.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: LuenTai2; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [LuenTai2] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/LuenTai2/LuenTai2.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: KengTawng2; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [KengTawng2] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/KengTawng2/KengTawng2.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: KT2; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [KT2] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/KT2/KT2.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: KT3; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [KT3] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/KT3/KT3.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Pyidaungsu; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Pyidaungsu] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://mmwebfonts.comquas.com/fonts/Pyidaungsu-2.1_Regular.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Myanmar Sans Pro; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Sans Pro] 
+ၸၼ်လူတ်ႇလူင်း [<a href="//fonts.gstatic.com/ea/myanmarsanspro/v4/MyanmarSansPro-Regular.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Khyay; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Khyay] 
+ၸၼ်လူတ်ႇလူင်း [<a href="//fonts.gstatic.com/ea/khyay/v2/Khyay-Regular.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Masterpiece Uni Round; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Masterpiece Uni Round] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MasterpieceUniRound/MasterpieceUniRound.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Myanmar Angoun; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Angoun] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarAngoun/MyanmarAngoun.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Myanmar Gantgaw; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Gantgaw] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarGantgaw/MyanmarGantgaw.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Myanmar Sagar; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Sagar] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarSagar/MyanmarSagar.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Myanmar Yinmar; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Yinmar] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarYinmar/MyanmarYinmar.ttf" target="_blank">Download Font</a>]</p></li>
+<li><p style="font-family: Myanmar Square Light; font-size: large;">
+ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Square Light] 
+ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarSquareLight/MyanmarSquareLight.ttf" target="_blank">Download Font</a>]</p></li>
 </ol>
 <p><i><strong>မၢႆတွင်း ... </strong></i>ၾွၼ်ႉဢၼ်လႂ်ပႆႇမီးလႄႈ သင်ဝႃႈၶႂ်ႈသႂ်ႇထႅင်ႈၼႆ သူင်ႇမႃးပၼ်လႆႈယူႇ တေဢဝ်သႂ်ႇပၼ်ၼႂ်းသဵၼ်ႈမၢႆၼႆႉ။</p>
 <p><i><strong>ၶေႃႈယွမ်းၼွမ်း ... </strong></i>ယွမ်းၼွမ်းလႄႈ ယွၼ်းတၢင်းၶႂၢင်ႉထိုင် ၸိူဝ်းၽူႈၶူင်ၾွၼ်ႉယူႇၼီႇၶူတ်ႉႁဝ်းၶဝ်တင်းသဵင်ႈယူႇဢေႃႈ ယွၼ်ႉဝႃႈ ၾွၼ်ႉယူႇၼီႇၶူတ်ႉမၢင်ဢၼ် ဢမ်ႇႁူႉၸိုဝ်ႈၽူႈၶူင်သၢင်ႈမၼ်းလႄႈ ၸင်ႇဝႃႈ ဢမ်ႇလႆႈသႂ်ႇပႃးၽူႈၶူင်သၢင်ႈမၼ်းၶႃႈ။</p>
