--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head><link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/></head>
 <h1 style="font-family:GHK KengTung">ၾွၼ်ႉယူႇၼီႇၶူတ်ႉ တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</h1>
-<h2>ၵဵပ်းတၢင်ႇၼႄ <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
+<h2 style="font-family:GHK Muse">ၵဵပ်းတၢင်ႇၼႄ <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
 www.saosu.blogspot.com</font></a></h2>
 <ol>
 <li><p style="font-family: NamKhoneUnicode; font-size: large;">
