--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head><link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/></head>
-<h1 style="font-family:GHK KengTung">ၾွၼ်ႉယူႇၼီႇၶူတ်ႉ တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</h1>
-<h2 style="font-family:GHK Muse">ၵဵပ်းတၢင်ႇၼႄ <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
-www.saosu.blogspot.com</font></a></h2>
+<div style="font-family: GHK KengTung; font-size: large;">ၾွၼ်ႉယူႇၼီႇၶူတ်ႉ တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</div>
+<div style="font-family: GHK Muse; font-size: large;">ၵဵပ်းတၢင်ႇၼႄ <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
+www.saosu.blogspot.com</font></a></div>
 <ol>
 <li><p style="font-family: NamKhoneUnicode; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
