--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head><link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/></head>
-<div style="font-family: GHK KengTung; font-size: large;">ၾွၼ်ႉယူႇၼီႇၶူတ်ႉ တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</div>
+<p style="font-family: PangLong; font-size: large;">ၾွၼ်ႉယူႇၼီႇၶူတ်ႉ တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</p>
 <div style="font-family: GHK Muse; font-size: large;">ၵဵပ်းတၢင်ႇၼႄ <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
 www.saosu.blogspot.com</font></a></div>
 <ol>
