--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<head><link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/></head>
-<p style="font-family: PangLong; font-size: large;">ၾွၼ်ႉယူႇၼီႇၶူတ်ႉ တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</p>
+<link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/>
+<h1 style="font-family: PangLong; font-size: large;">ၾွၼ်ႉယူႇၼီႇၶူတ်ႉ တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</h1>
 <div style="font-family: GHK Muse; font-size: large;">ၵဵပ်းတၢင်ႇၼႄ <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
 www.saosu.blogspot.com</font></a></div>
+<p>လၢႆးၾင်ၾွၼ်ႉ Embed font</p>
+ဢဝ်ၶူတ်ႉဢၼ်ၼႆႉ ဝၢင်းသႂ်ႇတီႈ ၼႂ်းထိမ်း CSS ၼၼ်ႉတႃႉ 
+<link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/>
+ဢမ်ႇၼၼ်ၸႂ်ႉဢၼ်ၼႆႉၵေႃႈလႆႈယူႇ
+@import url('https://saosu-mp.github.io/font/all.css');
+<p>2. ၵမ်းၼႆႉ ၵူႈတီႈ ဢၼ်ႁၼ်မႅၼ်ႈ တီႈသုတ်းထႅဝ်လိၵ်ႈဝႃႈ ...self (ဢမ်ႇၼၼ်) font-family:"...." ၸိူဝ်းၼၼ်ႉ လၢႆႈသႂ်ႇၸိုဝ်ႈၾွၼ်ႉ ဢၼ်ၸဝ်ႈၵဝ်ႇၶႂ်ႈၸႂ်ႉ ၸွမ်းၼင်ႇ သဵၼ်ႈမၢႆၸိုဝ်ႈၾွၼ်ႉပႃႈတႂ်ႈၼႆႉတႃႉ။</p>
 <ol>
 <li><p style="font-family: NamKhoneUnicode; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
