--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <h1 style="font-family:GHK KengTung">ၾွၼ်ႉယူႇၼီႇၶူတ်ႉ တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</h1>
 <div style="font-family: GHK Muse; font-size: large;">ၵဵပ်းတၢင်ႇၼႄ <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
 www.saosu.blogspot.com</font></a></div>
-<h2 style="font-family:GHK Muse">လၢႆးၾင်ၾွၼ်ႉ Embed font</h2>
+<h2 style="font-family:GHK Muse">1. လၢႆးၾင်ၾွၼ်ႉ Embed font</h2>
 <p style="font-family:GHK Taunggyi"> ဢဝ်ၶူတ်ႉဢၼ်ၼႆႉ ဝၢင်းသႂ်ႇတီႈ ၼႂ်းထိမ်း CSS ၼၼ်ႉတႃႉ <br/>
-<link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/> <br/>
+[[ <link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/> ]]<br/>
 ဢမ်ႇၼၼ်ၸႂ်ႉဢၼ်ၼႆႉၵေႃႈလႆႈယူႇ <br/>
   @import url('https://saosu-mp.github.io/font/all.css'); </p>
 <h2 style="font-family:GHK Muse">2. တွၼ်ႈၽင်ၾွၼ်ႉ </h2>
