--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <div style="font-family: GHK Muse; font-size: large;">ၵဵပ်းတၢင်ႇၼႄ <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
 www.saosu.blogspot.com</font></a></div>
 <h2 style="font-family:GHK Muse">လၢႆးၾင်ၾွၼ်ႉ ၼႂ်းဝႅပ်ႉသၢႆႉ (Embed font)</h2>
-<p style="font-family:GHK Taunggyi">Coming Soon</p>
+<p style="font-family:GHK Taunggyi">Coming Soon ...</p>
 <ol>
 <li><p style="font-family: NamKhoneUnicode; font-size: large;">
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [NamKhoneUnicode] 
@@ -90,5 +90,5 @@ www.saosu.blogspot.com</font></a></div>
 ပိူင်ၽၢင်ႁၢင်ႈၾွၼ်ႉ ယူႇၼီႇၶူတ်ႉ တႅမ်ႈလူင်းမိူၼ်ၼႆ Unicode Font - ႑႒႓႔႕႖႗႘႙႐  ၸိုဝ်ႈၾွၼ်ႉ [Myanmar Square Light] 
 ၸၼ်လူတ်ႇလူင်း [<a href="https://saosu-mp.github.io/font/MyanmarSquareLight/MyanmarSquareLight.ttf" target="_blank">Download Font</a>]</p></li>
 </ol>
-<p><i><strong>မၢႆတွင်း ... </strong></i>ၾွၼ်ႉဢၼ်လႂ်ပႆႇမီးလႄႈ သင်ဝႃႈၶႂ်ႈသႂ်ႇထႅင်ႈၼႆ သူင်ႇမႃးပၼ်လႆႈယူႇ တေဢဝ်သႂ်ႇပၼ်ၼႂ်းသဵၼ်ႈမၢႆၼႆႉ။</p>
-<p><i><strong>ၶေႃႈယွမ်းၼွမ်း ... </strong></i>ယွမ်းၼွမ်းလႄႈ ယွၼ်းတၢင်းၶႂၢင်ႉထိုင် ၸိူဝ်းၽူႈၶူင်ၾွၼ်ႉယူႇၼီႇၶူတ်ႉႁဝ်းၶဝ်တင်းသဵင်ႈယူႇဢေႃႈ ယွၼ်ႉဝႃႈ ၾွၼ်ႉယူႇၼီႇၶူတ်ႉမၢင်ဢၼ် ဢမ်ႇႁူႉၸိုဝ်ႈၽူႈၶူင်သၢင်ႈမၼ်းလႄႈ ၸင်ႇဝႃႈ ဢမ်ႇလႆႈသႂ်ႇပႃးၽူႈၶူင်သၢင်ႈမၼ်းၶႃႈ။</p>
+<p style="font-family: KT2"><i><strong>မၢႆတွင်း ... </strong></i>ၾွၼ်ႉဢၼ်လႂ်ပႆႇမီးလႄႈ သင်ဝႃႈၶႂ်ႈသႂ်ႇထႅင်ႈၼႆ သူင်ႇမႃးပၼ်လႆႈယူႇ တေဢဝ်သႂ်ႇပၼ်ၼႂ်းသဵၼ်ႈမၢႆၼႆႉ။</p>
+<p style="font-family: KT2"><i><strong>ၶေႃႈယွမ်းၼွမ်း ... </strong></i>ယွမ်းၼွမ်းလႄႈ ယွၼ်းတၢင်းၶႂၢင်ႉထိုင် ၸိူဝ်းၽူႈၶူင်ၾွၼ်ႉယူႇၼီႇၶူတ်ႉႁဝ်းၶဝ်တင်းသဵင်ႈယူႇဢေႃႈ ယွၼ်ႉဝႃႈ ၾွၼ်ႉယူႇၼီႇၶူတ်ႉမၢင်ဢၼ် ဢမ်ႇႁူႉၸိုဝ်ႈၽူႈၶူင်သၢင်ႈမၼ်းလႄႈ ၸင်ႇဝႃႈ ဢမ်ႇလႆႈသႂ်ႇပႃးၽူႈၶူင်သၢင်ႈမၼ်းၶႃႈ။</p>
