--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link href='https://saosu-mp.github.io/font/all.css' rel='stylesheet'/>
 <h1 style="font-family:GHK KengTung">ၾွၼ်ႉယူႇၼီႇၶူတ်ႉ တႃႇၸႂ်ႉၼႂ်းဝႅပ်ႉသၢႆႉ လႄႈ ၼႂ်းၶွမ်း</h1>
-<div style="font-family: GHK Muse; font-size: large;">ၵဵပ်းတၢင်ႇၼႄ <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
+<div style="font-family: GHK Muse; font-size: large;">ၵဵပ်းႁွမ်ပိုၼ်ၽေ - <a href="https://saosu.blogspot.com/" target="_blank"><font color="blue"> 
 www.saosu.blogspot.com</font></a></div>
 <h2 style="font-family:GHK Muse">လၢႆးၾင်ၾွၼ်ႉ ၼႂ်းဝႅပ်ႉသၢႆႉ (Embed font)</h2>
 <p style="font-family:GHK Taunggyi">Coming Soon ...</p>
